--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-    "name": "static-site",
-    "version": "1.0.0",
-    "description": "<!-- https://www.w3schools.com/graphics/svg_polygon.asp --> <!-- https://www.w3schools.com/graphics/svg_rect.asp -->",
-    "main": "index.js",
-    "scripts": {
-      "test": "jest"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-      "inquirer": "^8.2.4",
-      "jest": "^29.5.0"
-    },
-    "directories": {
-      "example": "examples",
-      "lib": "lib"
-    }
+  "name": "static-site",
+  "version": "1.0.0",
+  "description": "<!-- https://www.w3schools.com/graphics/svg_polygon.asp --> <!-- https://www.w3schools.com/graphics/svg_rect.asp -->",
+  "main": "index.js",
+  "scripts": {
+    "test": "jest"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "inquirer": "^8.2.4",
+    "jest": "^29.5.0"
+  },
+  "directories": {
+    "example": "examples",
+    "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "github.com/choelzli/SVG-logo-maker"
   }
+}
